@@ -9,7 +9,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>680</width>
+            <width>586</width>
             <height>429</height>
         </rect>
     </property>
@@ -191,7 +191,7 @@
                         <rect>
                             <x>80</x>
                             <y>80</y>
-                            <width>290</width>
+                            <width>310</width>
                             <height>214</height>
                         </rect>
                     </property>
@@ -205,14 +205,14 @@
                     </property>
                     <property name="minimumSize">
                         <size>
-                            <width>290</width>
-                            <height>214</height>
+                            <width>0</width>
+                            <height>0</height>
                         </size>
                     </property>
                     <property name="maximumSize">
                         <size>
-                            <width>290</width>
-                            <height>214</height>
+                            <width>32767</width>
+                            <height>32767</height>
                         </size>
                     </property>
                 </widget>
