@@ -6,8 +6,9 @@ siduxcc (0.6.10) UNRELEASED; urgency=low
   [ Fabian Wuertz ]
   * siduxcc-kde: start: switch language menuitem added
   * siduxcc-kde: kernel: show new kernels bug fixed
+  * siduxcc-kde: "to small window" bug solved
 
- -- Fabian Wuertz <xadras@sidux.com>  Mon, 19 Nov 2007 17:34:49 +0100
+ -- Fabian Wuertz <xadras@sidux.com>  Mon, 19 Nov 2007 17:55:36 +0100
 
 siduxcc (0.6.9) unstable; urgency=low
 
